# wallet

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bandit.yaml  docker-compose.yml  manage.py  pyproject.toml
config/: urls.py
config/api_docs/: urls.py
config/server/: uwsgi.ini
config/settings/: base.py  development.py  test.py
fixtures/: dump.json
tests/: test_models.py
wallet/: models.py
wallet/api/: serializers.py  urls.py  views.py
wallet/migrations/: 0001_initial.py
